--- a/conf/trainer/default_trainer.yaml
+++ b/conf/trainer/default_trainer.yaml
@@ -1,10 +1,9 @@
 trainer:
-  gpus: 1
-  distributed_backend: dp
+  # gpus: 0
+  accelerator: dp
   accumulate_grad_batches: 1
   profiler: False
   max_epochs: 50
-  log_save_interval: 100
+  log_every_n_steps: 100
   gradient_clip_val: 0.5
   num_sanity_val_steps: 0
-  weights_summary:
