--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,15 @@
-torchvision==0.6.0
-numpy==1.17.5
-matplotlib==3.2.1
-omegaconf==1.4.1
-opencv_python_headless==4.2.0.34
-pandas==1.0.3
-pytorch_lightning==0.8.0
-albumentations==0.4.5
-hydra_core==0.11.3
-comet_ml==3.1.11
-tqdm==4.45.0
-torch==1.5.0
-pycocotools==2.0
-hydra==2.5
-Pillow==7.1.2
-scikit_learn==0.23.1
+torchvision
+numpy
+matplotlib
+omegaconf
+opencv_python_headless
+pandas
+pytorch_lightning
+albumentations
+hydra_core
+comet_ml
+tqdm
+torch
+pycocotools
+Pillow
+scikit_learn
